优化渐隐通知窗口的动画，添加程序exe图标

--- a/MainAppcation/NetProxyController.csproj
+++ b/MainAppcation/NetProxyController.csproj
@@ -6,7 +6,12 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseWPF>True</UseWPF>
+    <ApplicationIcon>ApplicationIcon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="ApplicationIcon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="HandyControl" Version="3.4.0" />
