--- a/MainAppcation/NetProxyController.csproj
+++ b/MainAppcation/NetProxyController.csproj
@@ -54,4 +54,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Tools\" />
+    <Folder Include="View\" />
+  </ItemGroup>
+
 </Project>
