--- a/NetProxyControllerTests/NetProxyControllerTests.csproj
+++ b/NetProxyControllerTests/NetProxyControllerTests.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\MainAppcation\NetProxyController.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Handler\" />
+  </ItemGroup>
+
 </Project>
